--- a/.github/workflows/cotinuous-intergration.yaml
+++ b/.github/workflows/cotinuous-intergration.yaml
@@ -40,6 +40,12 @@ jobs:
       fail-fast: false
       matrix:
         kubernetes_version: ['1.19.6']
+
+    # runs all of the steps inside the specified container rather than on the VM host.
+    # Because of this the network configuration changes from host based network to a container network.
+    container:
+      image:  python:3.8-slim-bullseye
+
     services:
       postgres:
         image: postgres
@@ -54,9 +60,13 @@ jobs:
           --health-timeout 5s
           --health-retries 5
         ports:
-        - 5432/tcp
+        - 5432:5432
     steps:
       - uses: actions/checkout@v2
+      - name: copy kubeconfig
+        run: |
+          mkdir -p ~/.kube
+          cp .ci/kubeconfig.yaml ~/.kube/config
       - name: setup minikube
         id: minikube
         uses: manusa/actions-setup-minikube@v2.4.3
@@ -67,17 +77,13 @@ jobs:
         run: |
           kubectl apply -f postgres_crd.yaml
           kubectl apply -f postgresuser_crd.yaml
-      - name: setup py37
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.8"
       - name: install deps
         run: |
           python -m pip install -U pip
           python -m pip install -r requirements.txt
       - name: run kopf tests
         env:
-          POSTGRES_HOST: "127.0.0.1"
+          POSTGRES_HOST: postgres
           POSTGRES_DEFAULT_DATABASE: postgres
           POSTGRES_PASS: somePassword
           POSTGRES_USER: postgres
