--- a/.github/workflows/cotinuous-intergration.yaml
+++ b/.github/workflows/cotinuous-intergration.yaml
@@ -44,7 +44,7 @@ jobs:
     # runs all of the steps inside the specified container rather than on the VM host.
     # Because of this the network configuration changes from host based network to a container network.
     container:
-      image:  python:3.8-slim-bullseye
+      image:  ubuntu:focal
 
     services:
       postgres:
@@ -77,6 +77,10 @@ jobs:
         run: |
           kubectl apply -f postgres_crd.yaml
           kubectl apply -f postgresuser_crd.yaml
+      - name: setup py38
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.8"
       - name: install deps
         run: |
           python -m pip install -U pip
