--- a/.github/workflows/cotinuous-intergration.yaml
+++ b/.github/workflows/cotinuous-intergration.yaml
@@ -67,6 +67,7 @@ jobs:
         run: |
           apt-get update
           apt-get -y install sudo
+          apt-get install iptables
       - name: copy kubeconfig
         run: |
           mkdir -p ~/.kube
