--- a/.github/workflows/cotinuous-intergration.yaml
+++ b/.github/workflows/cotinuous-intergration.yaml
@@ -85,4 +85,4 @@ jobs:
         run: |
           apt-get update
           apt-get -y install postgresql-client
-          psql postgres://${POSTGRES_USER}:${POSTGRES_PASS}@${POSTGRES_HOST}:${POSTGRES_PORT}/{POSTGRES_DEFAULT_DATABASE} -c 'CREATE DATABASE rudo'
+          psql postgres://${POSTGRES_USER}:${POSTGRES_PASS}@${POSTGRES_HOST}:${POSTGRES_PORT}/{POSTGRES_DEFAULT_DATABASE} -c 'CREATE DATABASE rudo;'
