--- a/.github/workflows/cotinuous-intergration.yaml
+++ b/.github/workflows/cotinuous-intergration.yaml
@@ -85,4 +85,12 @@ jobs:
         run: |
           apt-get update
           apt-get -y install postgresql-client
+      - name: timomo
+        env:
+          POSTGRES_HOST: "127.0.0.1"
+          POSTGRES_DEFAULT_DATABASE: postgres
+          POSTGRES_PASS: somePassword
+          POSTGRES_USER: postgres
+          POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
+        run: |
           psql postgres://${POSTGRES_USER}:${POSTGRES_PASS}@${POSTGRES_HOST}:${POSTGRES_PORT}/{POSTGRES_DEFAULT_DATABASE} -c 'CREATE DATABASE rudo;'
