--- a/.github/workflows/cotinuous-intergration.yaml
+++ b/.github/workflows/cotinuous-intergration.yaml
@@ -65,7 +65,7 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
         run: |
-          apt-get -y install postgresql-client
+          sudo apt-get -y install postgresql-client
       - name: setup minikube
         id: minikube
         uses: manusa/actions-setup-minikube@v2.4.3
