--- a/.github/workflows/cotinuous-intergration.yaml
+++ b/.github/workflows/cotinuous-intergration.yaml
@@ -66,6 +66,7 @@ jobs:
           POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
         run: |
           sudo apt-get -y install postgresql-client
+          echo $USER
       - name: setup minikube
         id: minikube
         uses: manusa/actions-setup-minikube@v2.4.3
@@ -76,6 +77,7 @@ jobs:
         run: |
           kubectl apply -f postgres_crd.yaml
           kubectl apply -f postgresuser_crd.yaml
+           ECHO $USER
       - name: setup py37
         uses: actions/setup-python@v3
         with:
@@ -92,4 +94,5 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
         run: |
+           echo $USER
           psql postgres://${POSTGRES_USER}:${POSTGRES_PASS}@${POSTGRES_HOST}:${POSTGRES_PORT}/{POSTGRES_DEFAULT_DATABASE} -c 'CREATE DATABASE rudo;'
