--- a/.github/workflows/cotinuous-intergration.yaml
+++ b/.github/workflows/cotinuous-intergration.yaml
@@ -36,6 +36,8 @@ jobs:
   crd_tests:
     name: crd validity tests
     runs-on: ubuntu-latest
+    container:
+      image: ubuntu:focal
     strategy:
       fail-fast: false
       matrix:
@@ -57,27 +59,13 @@ jobs:
         - 5432:5432
     steps:
       - uses: actions/checkout@v2
-      - name: run kopf tests
-        env:
-          POSTGRES_HOST: "127.0.0.1"
-          POSTGRES_DEFAULT_DATABASE: postgres
-          POSTGRES_PASS: somePassword
-          POSTGRES_USER: postgres
-          POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
+      - uses: engineerd/setup-kind@v0.5.0
+      - name: Testing
         run: |
-          sudo apt-get -y install postgresql-client
-          echo $USER
-      - name: setup minikube
-        id: minikube
-        uses: manusa/actions-setup-minikube@v2.4.3
-        with:
-          minikube version: v1.25.1
-          kubernetes version: v${{ matrix.kubernetes_version }}
-      - name: apply crd
-        run: |
-          kubectl apply -f postgres_crd.yaml
-          kubectl apply -f postgresuser_crd.yaml
-          echo $USER
+          kubectl cluster-info
+          kubectl get pods -n kube-system
+          echo "current-context:" $(kubectl config current-context)
+          echo "environment-kubeconfig:" ${KUBECONFIG}
       - name: setup py37
         uses: actions/setup-python@v3
         with:
