--- a/.github/workflows/cotinuous-intergration.yaml
+++ b/.github/workflows/cotinuous-intergration.yaml
@@ -60,7 +60,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: docker-practice/actions-setup-docker@master
-        name: tanya
+      - name: tanya
         run: |
           set -x
           docker version
