--- a/.github/workflows/cotinuous-intergration.yaml
+++ b/.github/workflows/cotinuous-intergration.yaml
@@ -64,7 +64,8 @@ jobs:
           apt-get update
           apt-get -y install curl
           apt-get -y install sudo gpg
-          apt install systemctl -y
+          apt install systemctl  -y
+          apt install lsb-release -y
       - uses: docker-practice/actions-setup-docker@master
       - name: tanya
         run: |
