--- a/.github/workflows/cotinuous-intergration.yaml
+++ b/.github/workflows/cotinuous-intergration.yaml
@@ -66,7 +66,7 @@ jobs:
           apt-get -y install sudo gpg
           apt install systemctl  -y
           apt install lsb-release -y
-      - uses: docker-practice/actions-setup-docker@master
+      - uses: docker-practice/actions-setup-docker@1.0.8
       - name: tanya
         run: |
           set -x
