--- a/.github/workflows/cotinuous-intergration.yaml
+++ b/.github/workflows/cotinuous-intergration.yaml
@@ -29,8 +29,6 @@ jobs:
           pip install tox tox-gh-actions
       - name: run tests
         run: |
-          mkdir -p ~/.kube
-          cp .ci/kubeconfig.yaml ~/.kube/config
           tox
 
   crd_tests:
@@ -62,6 +60,11 @@ jobs:
           POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
         run: |
           sudo apt-get -y install postgresql-client
+      - uses: engineerd/setup-kind@v0.5.0
+      - name: Testing
+        run: |
+          kubectl apply -f postgres_crd.yaml
+          kubectl apply -f postgresuser_crd.yaml
       - name: setup py37
         uses: actions/setup-python@v3
         with:
