--- a/.github/workflows/cotinuous-intergration.yaml
+++ b/.github/workflows/cotinuous-intergration.yaml
@@ -73,6 +73,15 @@ jobs:
         run: |
           python -m pip install -U pip
           python -m pip install -r requirements.txt
+      - name: run kopf tests
+        env:
+          POSTGRES_HOST: "127.0.0.1"
+          POSTGRES_DEFAULT_DATABASE: postgres
+          POSTGRES_PASS: somePassword
+          POSTGRES_USER: postgres
+          POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
+        run: |
+          tox -e e2e
       - name: timomo
         env:
           POSTGRES_HOST: "127.0.0.1"
