--- a/.github/workflows/cotinuous-intergration.yaml
+++ b/.github/workflows/cotinuous-intergration.yaml
@@ -38,8 +38,8 @@ jobs:
       fail-fast: false
       matrix:
         image_version:
-        - kindest/node:v1.21.1@sha256:69860bda5563ac81e3c0057d654b5253219618a22ec3a346306239bba8cfa1a6
-        - kindest/node:v1.22.0@sha256:b8bda84bb3a190e6e028b1760d277454a72267a5454b57db34437c34a588d047
+        - "kindest/node:v1.21.1@sha256:69860bda5563ac81e3c0057d654b5253219618a22ec3a346306239bba8cfa1a6"
+        - "kindest/node:v1.22.0@sha256:b8bda84bb3a190e6e028b1760d277454a72267a5454b57db34437c34a588d047"
     services:
       postgres:
         image:  postgres:10.8
@@ -64,6 +64,7 @@ jobs:
           sudo apt-get -y install postgresql-client
       - uses: engineerd/setup-kind@v0.5.0
         with:
+          version: "v0.11.1"
           image: ${{ matrix.image_version }}
       - name: Testing
         run: |
