--- a/.github/workflows/cotinuous-intergration.yaml
+++ b/.github/workflows/cotinuous-intergration.yaml
@@ -32,7 +32,7 @@ jobs:
           tox
 
   crd_tests:
-    name: crd validity tests
+    name: e2e_tests
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
