--- a/.ci/kubeconfig.yaml
+++ b/.ci/kubeconfig.yaml
@@ -1,23 +1,41 @@
+---
+apiVersion: kind.x-k8s.io/v1alpha4
+kind: Cluster
+nodes:
+- role: control-plane
+  extraPortMappings:
+  - containerPort: 25432
+    hostPort: 25432
+    listenAddress: "0.0.0.0"
+    protocol: tcp
+- role: worker
+---
 apiVersion: v1
-kind: Config
-preferences: {}
-
-clusters:
-  - cluster:
-      insecure-skip-tls-verify: true
-      server: https://localhost
-    name: test
-
-users:
-  - name: test
-    user:
-      password: test
-      username: test
-
-contexts:
-  - context:
-      cluster: test
-      user: test
-    name: test
-
-current-context: test
+kind: Pod
+metadata:
+  name: postgres
+  labels:
+    app: postgres
+spec:
+  containers:
+  - name: postgres
+    image: postgres:11.15
+    ports:
+    - containerPort: 5432
+    env:
+    - name: POSTGRES_PASSWORD
+      value: somePassword
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgres
+spec:
+  type: NodePort
+  selector:
+    app: postgres
+  ports:
+  - protocol: TCP
+    port: 5432
+    targetPort: 5432
+    nodePort: 25432
